dotnet-core-31.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-core-31
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-core-31
  template:
    metadata:
      labels:
        app: dotnet-core-31
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: dotnet-core-31
        image: harryacr.azurecr.io/dotnet-core-31:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-core-31
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: dotnet-core-31
